auto publishing updates to notebooks

--- a/cake_eating_numerical.ipynb
+++ b/cake_eating_numerical.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "89c178bb",
+   "id": "bef04f1e",
    "metadata": {},
    "source": [
     "# Cake Eating: Numerical Methods"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8bdb91e",
+   "id": "6a7f9dd4",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8eeaeef8",
+   "id": "77b3e575",
    "metadata": {
     "hide-output": false
    },
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a87ee85b",
+   "id": "a9ca80de",
    "metadata": {},
    "source": [
     "We will use the following imports."
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3712a4d5",
+   "id": "61deb342",
    "metadata": {
     "hide-output": false
    },
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07b84a81",
+   "id": "768230d8",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e94c7c98",
+   "id": "542d3193",
    "metadata": {
     "hide-output": false
    },
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd5c7c1c",
+   "id": "dc0942c7",
    "metadata": {},
    "source": [
     "## Reviewing the Model\n",
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73667302",
+   "id": "e1f66378",
    "metadata": {},
    "source": [
     "## Implementation using JAX\n",
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35f7b258",
+   "id": "25f715f9",
    "metadata": {
     "hide-output": false
    },
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e7c8fa1",
+   "id": "c7dd6294",
    "metadata": {},
    "source": [
     "Let’s define a model to represent the Cake Eating Problem."
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e470cafe",
+   "id": "d50af3aa",
    "metadata": {
     "hide-output": false
    },
@@ -156,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99858581",
+   "id": "2e1533ff",
    "metadata": {
     "hide-output": false
    },
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc640d53",
+   "id": "9c62b463",
    "metadata": {},
    "source": [
     "Now let’s define the CRRA utility function."
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4a7fe01",
+   "id": "a42ca2ee",
    "metadata": {
     "hide-output": false
    },
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "543290d8",
+   "id": "e44aa120",
    "metadata": {},
    "source": [
     "### The Bellman Operator\n",
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "731b57c0",
+   "id": "d6c84b74",
    "metadata": {
     "hide-output": false
    },
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b1236dc",
+   "id": "2bc59da4",
    "metadata": {},
    "source": [
     "In order to create a vectorized function using `state_action_value`, we use [jax.vmap](https://jax.readthedocs.io/en/latest/_autosummary/jax.vmap.html).\n",
@@ -254,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b23250eb",
+   "id": "440670e3",
    "metadata": {
     "hide-output": false
    },
@@ -266,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fdbadd2a",
+   "id": "1f5ebf5d",
    "metadata": {
     "hide-output": false
    },
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8838bf30",
+   "id": "b22c42c0",
    "metadata": {},
    "source": [
     "Let’s start by creating a Cake Eating Model instance using the default parameterization."
@@ -295,7 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84fcdd52",
+   "id": "ebaccec1",
    "metadata": {
     "hide-output": false
    },
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "749fe48d",
+   "id": "775ddbbd",
    "metadata": {},
    "source": [
     "Now let’s see the iteration of the value function in action.\n",
@@ -318,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1630e9e0",
+   "id": "fb9796f4",
    "metadata": {
     "hide-output": false
    },
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8954808c",
+   "id": "624403fa",
    "metadata": {},
    "source": [
     "Let’s introduce a wrapper function called `compute_value_function`\n",
@@ -357,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f91d4b02",
+   "id": "8f9eb9a9",
    "metadata": {
     "hide-output": false
    },
@@ -396,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1808bcd",
+   "id": "3de2c676",
    "metadata": {
     "hide-output": false
    },
@@ -410,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d2662d6",
+   "id": "2343f26f",
    "metadata": {
     "hide-output": false
    },
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5743694d",
+   "id": "2b53fd65",
    "metadata": {},
    "source": [
     "Next let’s compare it to the analytical solution."
@@ -437,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c55883c3",
+   "id": "f512e340",
    "metadata": {
     "hide-output": false
    },
@@ -449,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d76a98d",
+   "id": "a025e777",
    "metadata": {
     "hide-output": false
    },
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a177b3e4",
+   "id": "5ae003d9",
    "metadata": {},
    "source": [
     "### Policy Function\n",
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4dd80686",
+   "id": "ce193856",
    "metadata": {
     "hide-output": false
    },
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5914f356",
+   "id": "ef9042ba",
    "metadata": {},
    "source": [
     "Now let’s pass the approximate value function and compute optimal consumption:"
@@ -529,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43fbce0a",
+   "id": "1f474aab",
    "metadata": {
     "hide-output": false
    },
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6b45cc0",
+   "id": "ca300e2b",
    "metadata": {},
    "source": [
     "Let’s plot this next to the true analytical solution"
@@ -549,7 +549,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0514e86a",
+   "id": "db88fa96",
    "metadata": {
     "hide-output": false
    },
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6587321",
+   "id": "504bf556",
    "metadata": {},
    "source": [
     "## Numba implementation\n",
@@ -582,7 +582,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9763fffd",
+   "id": "d8716b28",
    "metadata": {
     "hide-output": false
    },
@@ -597,7 +597,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7511605",
+   "id": "d234c9bf",
    "metadata": {
     "hide-output": false
    },
@@ -610,7 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c340bfa",
+   "id": "30366de6",
    "metadata": {
     "hide-output": false
    },
@@ -628,7 +628,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62dac422",
+   "id": "6ab3e70e",
    "metadata": {
     "hide-output": false
    },
@@ -643,7 +643,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39764fd9",
+   "id": "a3fb549b",
    "metadata": {
     "hide-output": false
    },
@@ -664,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ef8bb41",
+   "id": "a717f765",
    "metadata": {
     "hide-output": false
    },
@@ -691,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "609c0015",
+   "id": "7e93efb7",
    "metadata": {
     "hide-output": false
    },
@@ -730,7 +730,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b7a8774",
+   "id": "96ebf7b6",
    "metadata": {
     "hide-output": false
    },
@@ -742,7 +742,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18aeb20d",
+   "id": "c2143c8f",
    "metadata": {
     "hide-output": false
    },
@@ -756,7 +756,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5cf04e12",
+   "id": "390c232f",
    "metadata": {
     "hide-output": false
    },
@@ -770,7 +770,7 @@
   }
  ],
  "metadata": {
-  "date": 1694393438.237026,
+  "date": 1694398321.6073105,
   "filename": "cake_eating_numerical.md",
   "kernelspec": {
    "display_name": "Python",
