--- a/inventory_dynamics.ipynb
+++ b/inventory_dynamics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "180a1c04",
+   "id": "7b1258ad",
    "metadata": {},
    "source": [
     "# Inventory Dynamics"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67c1e2f6",
+   "id": "1f96d1e2",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0379a2c",
+   "id": "b0e39813",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44b59d0d",
+   "id": "8d7eab72",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36e9a355",
+   "id": "ad584cd1",
    "metadata": {
     "hide-output": false
    },
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "002f8124",
+   "id": "dfcf43fc",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3462e4ca",
+   "id": "1e7424a0",
    "metadata": {
     "hide-output": false
    },
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8fa0ec34",
+   "id": "928bd4bb",
    "metadata": {},
    "source": [
     "## Sample paths\n",
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f32ee622",
+   "id": "14c77bfa",
    "metadata": {
     "hide-output": false
    },
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b2cbb7c",
+   "id": "9c5b184b",
    "metadata": {},
    "source": [
     "## Example 1: marginal distributions\n",
@@ -162,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83c10c2c",
+   "id": "18f1f05b",
    "metadata": {
     "hide-output": false
    },
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b805b6cc",
+   "id": "dfcdbe68",
    "metadata": {},
    "source": [
     "This model for inventory dynamics is asymptotically stationary, with a unique\n",
@@ -227,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16c68f69",
+   "id": "c855c63f",
    "metadata": {
     "hide-output": false
    },
@@ -266,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f85d5d52",
+   "id": "bb293d7d",
    "metadata": {
     "hide-output": false
    },
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e5d5328",
+   "id": "b5703cba",
    "metadata": {},
    "source": [
     "Note that we did not JIT-compile the outer loop, since\n",
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8eb52e7",
+   "id": "3432e209",
    "metadata": {},
    "source": [
     "### Alternative implementation with `lax.scan`\n",
@@ -317,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0962ccb3",
+   "id": "598463d1",
    "metadata": {
     "hide-output": false
    },
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0bea2d0f",
+   "id": "bac4868d",
    "metadata": {},
    "source": [
     "The benefit of the `lax.scan` implementation is that we compile the whole\n",
@@ -368,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f2eb1aa",
+   "id": "b2e51917",
    "metadata": {
     "hide-output": false
    },
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ceebc1f",
+   "id": "d4575a0f",
    "metadata": {},
    "source": [
     "Notice that by $ t=500 $ or $ t=750 $ the densities are barely\n",
@@ -407,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1675c1d3",
+   "id": "3923fad2",
    "metadata": {
     "hide-output": false
    },
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f053265f",
+   "id": "df40926c",
    "metadata": {},
    "source": [
     "## Example 2: restock frequency\n",
@@ -450,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3b6141d",
+   "id": "1e0eb934",
    "metadata": {
     "hide-output": false
    },
@@ -492,7 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ee1d278",
+   "id": "8238beca",
    "metadata": {
     "hide-output": false
    },
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7fca7e6a",
+   "id": "91f6513e",
    "metadata": {},
    "source": [
     "### Alternative implementation with `lax.scan`\n",
@@ -516,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68b7e6e7",
+   "id": "e63ad862",
    "metadata": {
     "hide-output": false
    },
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a2603c2",
+   "id": "40714b6d",
    "metadata": {},
    "source": [
     "Note the time the routine takes to run, as well as the output"
@@ -572,7 +572,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3261529",
+   "id": "d8c66da1",
    "metadata": {
     "hide-output": false
    },
@@ -584,7 +584,7 @@
   }
  ],
  "metadata": {
-  "date": 1694393438.3230207,
+  "date": 1694398321.691155,
   "filename": "inventory_dynamics.md",
   "kernelspec": {
    "display_name": "Python",
