--- a/opt_savings.ipynb
+++ b/opt_savings.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "daf9398a",
+   "id": "97b69aa9",
    "metadata": {},
    "source": [
     "# Optimal Savings"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ccc2575",
+   "id": "b37ca0bc",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4cb9cfa8",
+   "id": "ed098822",
    "metadata": {
     "hide-output": false
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52a3bca3",
+   "id": "44799297",
    "metadata": {},
    "source": [
     "We will use the following imports:"
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d274b86",
+   "id": "3153e316",
    "metadata": {
     "hide-output": false
    },
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a3f1810",
+   "id": "93dd6990",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d611b32c",
+   "id": "9be37f27",
    "metadata": {
     "hide-output": false
    },
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb3ceb1e",
+   "id": "04f1f647",
    "metadata": {},
    "source": [
     "Use 64 bit floats with JAX in order to match NumPy code\n",
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b95d670",
+   "id": "0268d5d8",
    "metadata": {
     "hide-output": false
    },
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7eca12a3",
+   "id": "66a35731",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -137,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d6f903c",
+   "id": "2b18640c",
    "metadata": {
     "hide-output": false
    },
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90dffd5e",
+   "id": "2caa093d",
    "metadata": {},
    "source": [
     "## Model primitives\n",
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6aa223b8",
+   "id": "93f9d832",
    "metadata": {
     "hide-output": false
    },
@@ -192,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb6e9ed8",
+   "id": "575c40ee",
    "metadata": {
     "hide-output": false
    },
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5bb36296",
+   "id": "ca836f4a",
    "metadata": {
     "hide-output": false
    },
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11258aac",
+   "id": "7911924c",
    "metadata": {},
    "source": [
     "Here’s the right hand side of the Bellman equation:"
@@ -255,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ae314b2",
+   "id": "6ead68ee",
    "metadata": {
     "hide-output": false
    },
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0fc14810",
+   "id": "b09fb633",
    "metadata": {},
    "source": [
     "## Operators\n",
@@ -304,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a5ab313",
+   "id": "a64dfdb2",
    "metadata": {
     "hide-output": false
    },
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f10a6f5",
+   "id": "7703d4a8",
    "metadata": {
     "hide-output": false
    },
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aaa821fb",
+   "id": "42a07635",
    "metadata": {},
    "source": [
     "and the Bellman operator $ T $"
@@ -376,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11876056",
+   "id": "1ab98c7c",
    "metadata": {
     "hide-output": false
    },
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ac375e3",
+   "id": "0af6dee2",
    "metadata": {},
    "source": [
     "The next function computes a $ v $-greedy policy given $ v $"
@@ -398,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ffeb64c",
+   "id": "2d180a1f",
    "metadata": {
     "hide-output": false
    },
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea7fac12",
+   "id": "6e3e7c9f",
    "metadata": {},
    "source": [
     "The function below computes the value $ v_\\sigma $ of following policy $ \\sigma $.\n",
@@ -450,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2589912",
+   "id": "23a67abb",
    "metadata": {
     "hide-output": false
    },
@@ -494,7 +494,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abafac37",
+   "id": "d7f0db4b",
    "metadata": {
     "hide-output": false
    },
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c36fb4f",
+   "id": "efcb87b1",
    "metadata": {},
    "source": [
     "## JIT compiled versions"
@@ -527,7 +527,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "246b1c9c",
+   "id": "3927b111",
    "metadata": {
     "hide-output": false
    },
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c0b5d01",
+   "id": "7ad8e224",
    "metadata": {},
    "source": [
     "## Solvers\n",
@@ -555,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85d0143c",
+   "id": "f9a3307f",
    "metadata": {
     "hide-output": false
    },
@@ -575,7 +575,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5fb401d",
+   "id": "21a98d4e",
    "metadata": {
     "hide-output": false
    },
@@ -600,7 +600,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "280b6667",
+   "id": "9fe9a4bd",
    "metadata": {
     "hide-output": false
    },
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01309794",
+   "id": "b26d9ad7",
    "metadata": {},
    "source": [
     "## Plots\n",
@@ -634,7 +634,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c648386",
+   "id": "5c611107",
    "metadata": {
     "hide-output": false
    },
@@ -652,7 +652,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3f49eda",
+   "id": "496265e3",
    "metadata": {
     "hide-output": false
    },
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce1126d4",
+   "id": "fdd9a3ff",
    "metadata": {},
    "source": [
     "## Tests\n",
@@ -681,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b77c6262",
+   "id": "7f26767d",
    "metadata": {
     "hide-output": false
    },
@@ -693,7 +693,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fba3c552",
+   "id": "d794ca19",
    "metadata": {
     "hide-output": false
    },
@@ -709,7 +709,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e128cc6f",
+   "id": "bba34d6e",
    "metadata": {
     "hide-output": false
    },
@@ -725,7 +725,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db730c68",
+   "id": "ea727d75",
    "metadata": {
     "hide-output": false
    },
@@ -741,7 +741,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13fa81af",
+   "id": "b550ac5a",
    "metadata": {
     "hide-output": false
    },
@@ -759,7 +759,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa8feb4d",
+   "id": "18ed040c",
    "metadata": {
     "hide-output": false
    },
@@ -779,7 +779,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "417075fc",
+   "id": "f123273a",
    "metadata": {
     "hide-output": false
    },
@@ -797,7 +797,7 @@
   }
  ],
  "metadata": {
-  "date": 1694393438.8009331,
+  "date": 1694398322.146392,
   "filename": "opt_savings.md",
   "kernelspec": {
    "display_name": "Python",
